--- a/product.html
+++ b/product.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="product.css" />
   </head>
   <body>
-    <nav class="navbar navshadow navbar-expand-lg bg-body sticky-top d-flex">
+    <nav class="navbar navbar-expand-lg bg-body sticky-top">
       <div
-        class="boxshadow container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3 pt-1 pb-1"
+        class="container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3 pt-1 pb-1"
       >
         <button
           class="navbar-toggle btn-sm border-0 bg-white d-lg-none"
@@ -28,9 +28,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
-          ><img src="./images/ar-logo.png" alt=""
+          ><img src="../images/ar-logo.png" alt=""
         /></a>
-
+        <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
         <div
           class="offcanvas offcanvas-start rewidth"
           tabindex="-1"
@@ -44,7 +44,9 @@
               class="btn-close d-lg-none"
               aria-label="Close"
             ></button>
-            <ul class="navbar-nav justify-content-start flex-grow-1 pe-5 px-5">
+            <ul
+              class="navbar-nav justify-content-start flex-grow-1 pe-5 px-5 align-items-lg-center"
+            >
               <li class="nav-item px-3">
                 <a class="nav-link" href="index.html">Home</a>
               </li>
@@ -52,22 +54,31 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./product.html"
+                  href="../product.html"
                   >Products</a
                 >
               </li>
               <li class="nav-item px-3">
                 <a class="nav-link" href="#">Pricing</a>
               </li>
+              <!-- <li class="nav-item px-3">
+                <a class="nav-link" href="#">Login</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link" href="#"></a>
+              </li> -->
             </ul>
+            <div class="d-lg-flex mx-5">
+              <a class="px-3 login align-self-center" href="#">Login</a>
+              <div class="my-3">
+                <button
+                  class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
+                >
+                  <a>Sign Up</a>
+                </button>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="flex-row">
-          <a class="fs-6 px-3 login" href="#">Login</a>
-
-          <button class="btn orange-bg px-md-3 py-sm-2 btn-lg mb-2">
-            <a>Sign Up</a>
-          </button>
         </div>
       </div>
     </nav>
@@ -77,7 +88,9 @@
       <section
         class="header-product col d-flex align-items-center justify-content-start border-0"
       >
-        <h1 class="col-md-6 ps-lg-5 px-lg-5 text-left text-white">
+        <h1
+          class="col-md-6 ps-lg-5 px-lg-5 text-left text-white d-none d-lg-block"
+        >
           Experience shopping like never before with our augmented reality (AR)
           technology
         </h1>
@@ -85,19 +98,15 @@
 
       <!-- ENHANCE -->
       <div class="text-center ps-lg-5 ms-lg-5 py-lg-5 pt-lg-4 mt-lg-4">
-        <h2 class="card-title">Popular Products</h2>
+        <h2 class="pt-5">Popular Products</h2>
       </div>
       <section class="mx-auto my-4">
         <div
-          class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 mx-auto g-4"
+          class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 mx-3 g-4"
         >
-          <div class="card border-0 col cyan mx-2">
+          <div class="card col cyan border-0 mx-2 py-2 px-3">
             <div class="pt-lg-5">
-              <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
-                alt=""
-              />
+              <img class="py-2" src="./images/Image-Container.png" alt="" />
             </div>
             <div class="d-flex justify-content-between">
               <div class="py-3">
@@ -106,7 +115,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-md-3 py-3">
                   <a class="nav-link" href="./products/chair.html"
                     >view product</a
                   >
@@ -114,30 +123,26 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col blue mx-2">
+          <div class="card border-0 col blue mx-2 py-2 px-3">
             <div class="pt-lg-5">
-              <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
-                alt=""
-              />
+              <img class="py-2" src="./images/Image-Container (1).png" alt="" />
             </div>
             <div class="d-flex justify-content-between">
               <div class="py-3">
-                <h6 class="card-title">Gaming Chair</h6>
+                <h6 class="card-title">Kitchen Cabinet</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
-                  <a class="nav-link" href="./products/chair.html"
+                <button class="btn orange-bg px-md-3 py-3">
+                  <a class="nav-link" href="./products/cabinet.html"
                     >view product</a
                   >
                 </button>
               </div>
             </div>
           </div>
-          <div class="card border-0 col purple mx-2">
+          <div class="card border-0 col-sm purple mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2"
@@ -146,21 +151,21 @@
               />
             </div>
             <div class="d-flex justify-content-between">
-              <div class="py-3">
-                <h6 class="card-title">Gaming Chair</h6>
+              <div class="py-2">
+                <h6 class="card-title">Table Lamp</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
-                  <a class="nav-link" href="./products/chair.html"
+                <button class="btn orange-bg px-md-3 py-3">
+                  <a class="nav-link" href="./products/lamp.html"
                     >view product</a
                   >
                 </button>
               </div>
             </div>
           </div>
-          <div class="card border-0 col pink mx-2">
+          <div class="card border-0 col pink mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2"
@@ -169,14 +174,14 @@
               />
             </div>
             <div class="d-flex justify-content-between">
-              <div class="py-3">
-                <h6 class="card-title">Gaming Chair</h6>
+              <div class="py-4">
+                <h6 class="card-title">Foldable Table</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
-                  <a class="nav-link" href="./products/chair.html"
+                <button class="btn orange-bg px-md-3 py-3">
+                  <a class="nav-link" href="./products/table.html"
                     >view product</a
                   >
                 </button>
@@ -186,8 +191,8 @@
         </div>
       </section>
       <div class="d-flex justify-content-center align-items-center py-2">
-        <button class="btn orange-bg px-md-3 py-sm-3 btn-lg mb-2">
-          <a class="nav-link" href="./all-products.html">Explore products</a>
+        <button class="btn orange-bg px-md-3 py-3">
+          <a class="nav-link" href="./all-products.html">Explore products ></a>
         </button>
       </div>
 
@@ -196,11 +201,11 @@
         class="card header d-flex-column align-items-center justify-content-center mx-lg-5 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
       >
         <h1
-          class="width-title text-center px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5 text-bolder"
+          class="width-title text-center px-lg-5 ps-lg-5 pe-lg-3 pt-5 mx-lg-5 text-bolder"
         >
           Boost Sales By Showcasing Product in 3D
         </h1>
-        <p class="width-text py-lg-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
+        <p class="width-text py-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
           Can enhance customers'appreciation and engagement with our product
           ultimately leading to increased sales and customer satisfaction.
         </p>
@@ -212,19 +217,19 @@
 
       <!-- FAQ -->
       <section
-        class="d-flex-column align-items-center justify-content-center sisyphus border-0 my-lg-2 mt-lg mx-lg-5 py-lg-5 text-center"
+        class="d-flex-column align-items-center justify-content-center sisyphus border-0 my-4 mx-lg-5 py-5 text-center"
       >
         <div>
           <img src="./images/Avatar-group.png" alt="" />
         </div>
-        <div class="py-3 pt-lg-4">
+        <div class="py-3 pt-4">
           <h5 class="text-center p">Got Some Questions?</h5>
-          <p class="text-center text-muted">
+          <p class="text-center text-muted px-3">
             Can't find the answer you're looking for? Please chat to our
             friendly team
           </p>
         </div>
-        <button class="btn orange-bg px-md-4 py-sm-3 btn-lg mb-2" type="submit">
+        <button class="btn orange-bg px-4 py-3 mt-3" type="submit">
           Get in touch
         </button>
       </section>
@@ -232,7 +237,9 @@
     <!-- FOOTER -->
     <section class="container">
       <footer>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5">
+        <div
+          class="row row-cols-2 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top mx-auto"
+        >
           <div class="col mb-2">
             <h6>Product</h6>
             <ul class="nav flex-column">
@@ -352,7 +359,7 @@
           <a class="nav col-md-4 justify-content-start d-flex" href="#"
             ><img src="./images/ar-logo.png" alt=""
           /></a>
-          <p>
+          <p class="text-muted">
             © 2023 I4G x swiftXR Challenge, Team Hybrid. All rights reserved.
           </p>
         </div>
