fixed bug: product page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
+        <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
           ><img src="../images/ar-logo.png" alt=""
         /></a>
         <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
@@ -53,17 +53,11 @@
                 >
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link" href="../product.html">Products</a>
+                <a class="nav-link" href="./product.html">Products</a>
               </li>
               <li class="nav-item px-3">
                 <a class="nav-link" href="#">Pricing</a>
               </li>
-              <!-- <li class="nav-item px-3">
-                <a class="nav-link" href="#">Login</a>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="#"></a>
-              </li> -->
             </ul>
             <div class="d-lg-flex mx-5">
               <a class="px-3 login align-self-center" href="#">Login</a>
