--- a/product.html
+++ b/product.html
@@ -27,7 +27,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
+        <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
           ><img src="../images/ar-logo.png" alt=""
         /></a>
         <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
@@ -48,13 +48,13 @@
               class="navbar-nav justify-content-start flex-grow-1 pe-5 px-5 align-items-lg-center"
             >
               <li class="nav-item px-3">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
               </li>
               <li class="nav-item px-3">
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="../product.html"
+                  href="./product.html"
                   >Products</a
                 >
               </li>
