--- a/all-products.html
+++ b/all-products.html
@@ -48,7 +48,7 @@
               class="navbar-nav justify-content-start flex-grow-1 pe-5 px-5 align-items-lg-center"
             >
               <li class="nav-item px-3">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
               </li>
               <li class="nav-item px-3">
                 <a
