fixed bug: product page

--- a/product.html
+++ b/product.html
@@ -191,8 +191,8 @@
         </div>
       </section>
       <div class="d-flex justify-content-center align-items-center py-2">
-        <button class="btn orange-bg px-md-3 py-3">
-          <a class="nav-link" href="./all-products.html">Explore products ></a>
+        <button class="btn orange-bg index px-3 py-4">
+          <a class="nav-link" href="./all-products.html">Explore products > </a>
         </button>
       </div>
 
@@ -229,8 +229,8 @@
             friendly team
           </p>
         </div>
-        <button class="btn orange-bg px-4 py-3 mt-3" type="submit">
-          Get in touch
+        <button class="btn orange-bg index px-3 py-4">
+          <a class="nav-link" href="./product.html">Get in touchnow </a>
         </button>
       </section>
     </main>
