--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body sticky-top">
-      <div
-        class="container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3 pt-1 pb-1"
-      >
+      <div class="container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3">
         <button
           class="navbar-toggle btn-sm border-0 bg-white d-lg-none"
           type="button"
@@ -27,10 +25,9 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
+        <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
           ><img src="../images/ar-logo.png" alt=""
         /></a>
-        <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
         <div
           class="offcanvas offcanvas-start rewidth"
           tabindex="-1"
@@ -65,7 +62,7 @@
                 <button
                   class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
                 >
-                  <a>Sign Up</a>
+                  <a href="#" class="nav-link">Sign Up</a>
                 </button>
               </div>
             </div>
@@ -91,7 +88,7 @@
           technology. Explore our collection today and see the difference for
           yourself
         </p>
-        <button class="btn orange-bg index px-3 py-4">
+        <button class="btn orange-bg index px-4 py-3">
           <a class="nav-link" href="./product.html">Shop now </a>
         </button>
         <div class="header-wrap pt-5">
@@ -277,8 +274,8 @@
             friendly team
           </p>
         </div>
-        <button class="btn orange-bg px-4 py-3 mt-3" type="submit">
-          Get in touch
+        <button class="btn orange-bg index px-4 py-3">
+          <a class="nav-link" href="./product.html">Get in touch </a>
         </button>
       </section>
     </main>
