trying to fix logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
+        <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
           ><img src="../images/ar-logo.png" alt=""
         /></a>
         <div
@@ -274,7 +274,7 @@
             friendly team
           </p>
         </div>
-        <button class="btn orange-bg index px-4 py-3">
+        <button class="btn orange-bg index px-3 py-4">
           <a class="nav-link" href="./product.html">Get in touch </a>
         </button>
       </section>
