--- a/product.html
+++ b/product.html
@@ -27,7 +27,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
+        <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
           ><img src="../images/ar-logo.png" alt=""
         /></a>
         <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
@@ -230,7 +230,7 @@
           </p>
         </div>
         <button class="btn orange-bg index px-3 py-4">
-          <a class="nav-link" href="./product.html">Get in touchnow </a>
+          <a class="nav-link" href="./product.html">Get in touch </a>
         </button>
       </section>
     </main>
