--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
-          ><img src="../images/ar-logo.png" alt=""
+          ><img src="./images/ar-logo.png" alt=""
         /></a>
         <div
           class="offcanvas offcanvas-start rewidth"
