--- a/product.html
+++ b/product.html
@@ -28,7 +28,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
-          ><img src="../images/ar-logo.png" alt=""
+          ><img src="./images/ar-logo.png" alt=""
         /></a>
         <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
         <div
