--- a/product.html
+++ b/product.html
@@ -15,9 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body sticky-top">
-      <div
-        class="container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3 pt-1 pb-1"
-      >
+      <div class="container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3">
         <button
           class="navbar-toggle btn-sm border-0 bg-white d-lg-none"
           type="button"
@@ -27,10 +25,9 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-sm-3 mx-lg-5" href="./index.html"
+        <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
           ><img src="./images/ar-logo.png" alt=""
         /></a>
-        <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
         <div
           class="offcanvas offcanvas-start rewidth"
           tabindex="-1"
@@ -48,7 +45,7 @@
               class="navbar-nav justify-content-start flex-grow-1 pe-5 px-5 align-items-lg-center"
             >
               <li class="nav-item px-3">
-                <a class="nav-link" href="./index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item px-3">
                 <a
@@ -61,12 +58,6 @@
               <li class="nav-item px-3">
                 <a class="nav-link" href="#">Pricing</a>
               </li>
-              <!-- <li class="nav-item px-3">
-                <a class="nav-link" href="#">Login</a>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="#"></a>
-              </li> -->
             </ul>
             <div class="d-lg-flex mx-5">
               <a class="px-3 login align-self-center" href="#">Login</a>
@@ -74,7 +65,7 @@
                 <button
                   class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
                 >
-                  <a>Sign Up</a>
+                  <a href="#" class="nav-link">Sign Up</a>
                 </button>
               </div>
             </div>
