--- a/all-products.html
+++ b/all-products.html
@@ -98,7 +98,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/chair.html"
                     >view product</a
                   >
@@ -117,7 +117,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/cabinet.html"
                     >view product</a
                   >
@@ -140,7 +140,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/lamp.html"
                     >view product</a
                   >
@@ -163,7 +163,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/table.html"
                     >view product</a
                   >
@@ -186,7 +186,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/mattress.html"
                     >view product</a
                   >
@@ -209,7 +209,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/drawer.html"
                     >view product</a
                   >
@@ -232,7 +232,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/painting.html"
                     >view product</a
                   >
@@ -278,7 +278,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/suitcase.html"
                     >view product</a
                   >
@@ -301,7 +301,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/sofa.html"
                     >view product</a
                   >
@@ -324,7 +324,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/dining.html"
                     >view product</a
                   >
@@ -347,7 +347,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn orange-bg px-2 py-3">
                   <a class="nav-link" href="./products/gas.html"
                     >view product</a
                   >
